# scrapy-meili-pipeline

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
examples/: docker-compose.yml
examples/simple_project/: scrapy.cfg
examples/simple_project/simple_project/: settings.py
examples/simple_project/simple_project/spiders/: demo_spider.py
src/scrapy_meili_pipeline/: __init__.py  meili_pipeline.py
tests/: test_pipeline.py
